# chartRadar

./: .gitignore  README.md  ai_concept.odp  download_kraken_data.py  my_ai_bot_notes.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_basic_config.py
chartradar/: __main__.py
chartradar/config/: __init__.py  loader.py  schema.py  validator.py
chartradar/config/examples/: basic_config.yaml  full_config.yaml  ma_slope_config.yaml  training_config.yaml
chartradar/core/: pipeline.py  types.py
chartradar/display/: __init__.py  base.py  comparator.py  exporter.py  statistics.py  visualizer.py
chartradar/fusion/: __init__.py  base.py  executor.py  registry.py
chartradar/fusion/strategies/: __init__.py  stacking.py  voting.py  weighted_average.py
chartradar/ingestion/: __init__.py  base.py  batch.py  cache.py  normalizer.py  streaming.py  validator.py
chartradar/ingestion/sources/: __init__.py  csv.py  exchange.py  freqtrade.py
chartradar/labeling/: __init__.py  exporter.py  metadata.py  storage.py  tool.py  validator.py
chartradar/metrics/: __init__.py  base.py  executor.py  registry.py
chartradar/metrics/algorithms/: __init__.py
chartradar/metrics/algorithms/ml/: __init__.py
chartradar/metrics/algorithms/rule_based/: __init__.py  ma_slope_detector.py  triangle_detector.py  wedge_detector.py
chartradar/src/: exceptions.py  integrated_pipeline.py  interfaces.py  logger.py  pipeline.py
chartradar/training/: __init__.py  base.py  checkpoint.py  evaluation.py  loop.py  metrics.py  split.py  tracking.py
docs/: GET_REAL_DATA.md  HOW_TO_RUN.md  MA_SLOPE_DETECTOR.md  MA_SLOPE_QUICK_REFERENCE.md
tasks/: prd-trading-pattern-recognition.md  tasks-prd-trading-pattern-recognition.md
tests/test_config/: __init__.py  test_loader.py  test_schema.py  test_validator.py
tests/test_display/: __init__.py  test_base.py  test_comparator.py  test_exporter.py  test_statistics.py
tests/test_fusion/: __init__.py  test_base.py  test_executor.py  test_strategies.py
tests/test_ingestion/: __init__.py  test_base.py  test_cache.py  test_normalizer.py  test_sources.py  test_validator.py
tests/test_labeling/: __init__.py  test_exporter.py  test_metadata.py  test_storage.py  test_tool.py  test_validator.py
tests/test_metrics/: __init__.py  test_base.py  test_executor.py  test_ma_slope_detector.py  test_pattern_detectors.py  test_registry.py
tests/test_training/: test_checkpoint.py  test_evaluation.py  test_loop.py  test_metrics.py  test_split.py  test_tracking.py
